--- a/src/app/pages/landing-page-quiz/landing-page-quiz.component.html
+++ b/src/app/pages/landing-page-quiz/landing-page-quiz.component.html
@@ -16,6 +16,7 @@
       </p>
       <button
         type="button"
+        routerLink="/detail-quiz"
         class="text-white bg-primary hover:text-primary hover:bg-secondary focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 mt-5"
       >
         Lanjutkan
