--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -18,33 +18,34 @@
     </button>
     <button
       *ngIf="dataLogin"
-      routerLink="/quiz"
+      (click)="startQuiz()"
       class="bg-primary text-white rounded-xl p-3 hover:bg-primary70"
     >
       MULAI QUIZ
     </button>
   </div>
 </div>
-<section class="mt-20 relative">
-  <img src="./../../../assets/img/cloud.png" alt="" class="absolute w-full" />
+
+<section class="relative">
+  <img
+    src="./../../../assets/img/cloud.png"
+    alt=""
+    class="absolute w-full md:top-10 top-28"
+  />
 </section>
+
 <section
-  class="bg-gradient-to-b from-[#A2DDF8] to-[#E3F2FA] bg-no-repeat bg-cover sm:mt-40 md:mt-52"
+  class="bg-gradient-to-b from-[#A2DDF8] to-[#E3F2FA] bg-no-repeat bg-cover mt-36 md:mt-48"
 >
   <div class="grid md:grid-cols-2 hero-2">
-    <div class="desc-2 grid justify-center content-center text-center p-20">
-      <p>
+    <div class="desc-2 grid justify-center content-center text-end p-20">
+      <h1 class="text-5xl text-primary font-extrabold">Purely</h1>
+      <p class="mt-5">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
         dignissimos ducimus ratione laboriosam, atque in hic vitae? Velit
         sapiente tempore aliquid, fugit dignissimos necessitatibus repellendus
         autem officia quaerat veniam suscipit! Laborum voluptate ab ipsum nisi
-        voluptatum minima quibusdam autem culpa atque. Molestiae doloremque
-        placeat neque cum natus, inventore, cupiditate tenetur praesentium quas
-        quis illum quam consequuntur ullam! Quidem, veritatis error. Libero
-        magni culpa consequatur dolorem voluptate commodi id eius! Beatae alias
-        voluptatum veritatis reiciendis provident, earum facere modi cum quasi
-        perspiciatis placeat, iste saepe neque. Minima ex voluptatibus inventore
-        aliquid.
+        voluptatum minima quibusdam autem culpa atque.
       </p>
     </div>
     <div class="img-2 grid justify-center">
@@ -64,26 +65,25 @@
         Your browser does not support the video tag.
       </video>
     </div>
-    <div class="desc-3 grid justify-center content-center text-center p-20">
-      <p>
+    <div class="desc-3 grid justify-center content-center text-start p-20">
+      <h1 class="text-5xl text-accent font-extrabold">Video Pembelajaran</h1>
+      <p class="mt-5">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro illum
         velit nobis saepe culpa at explicabo ipsam voluptatem distinctio
         deleniti nihil earum, dicta numquam beatae rerum recusandae autem vero
         debitis? Officiis recusandae odit voluptatum commodi quidem dolorum
         suscipit sequi expedita neque quo, laborum earum hic praesentium, libero
         omnis, in cumque iste ducimus. Quisquam natus obcaecati expedita cumque,
-        necessitatibus consectetur aliquid. Minima, aliquid recusandae.
-        Voluptatem magni totam saepe nihil earum error quasi deleniti. Tempora,
-        atque natus ipsam vitae in incidunt vel delectus exercitationem dolorem
-        commodi earum animi non est sint dolore?
+        necessitatibus consectetur aliquid.
       </p>
     </div>
   </div>
 </section>
 <section class="about bg-gradient-to-b from-[#E3F2FA] to-[#A2DDF8]">
   <div class="about grid md:grid-cols-2">
-    <div class="desc-4 grid justify-center content-center text-center p-20">
-      <p>
+    <div class="desc-4 grid justify-center content-center text-end p-20">
+      <h1 class="text-5xl text-accent font-extrabold">Our Augmented Reality</h1>
+      <p class="mt-5">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet quam
         voluptatibus asperiores nulla minus cumque, praesentium quae, temporibus
         atque culpa ipsa. Accusantium inventore accusamus nisi perferendis
