--- a/src/app/pages/layouts/layouts.component.html
+++ b/src/app/pages/layouts/layouts.component.html
@@ -12,39 +12,39 @@
       >
         LOGIN
       </button>
-      <button
-        *ngIf="userLogin"
-        (click)="refreshData()"
-        type="button"
-        class="flex text-sm rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
-        id="user-menu-button"
-        aria-expanded="false"
-        data-dropdown-toggle="user-dropdown"
-        data-dropdown-placement="bottom"
-      >
-        <span class="sr-only">Open user menu</span>
-        <img
-          class="w-8 h-8"
-          src="./../../../assets/img/icon-user.png"
-          alt="user photo"
-        />
-      </button>
+      <ng-container *ngIf="userLogin">
+        <button
+          type="button"
+          (click)="toggleUserMenu()"
+          class="flex text-sm rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+          id="user-menu-button"
+          aria-expanded="false"
+          data-dropdown-toggle="user-dropdown"
+          data-dropdown-placement="bottom"
+        >
+          <span class="sr-only">Open user menu</span>
+          <img
+            class="w-8 h-8"
+            src="./../../../assets/img/icon-user.png"
+            alt="user photo"
+          /></button
+      ></ng-container>
+
       <!-- Dropdown menu -->
       <div
-        *ngIf="userLogin"
         class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600"
         id="user-dropdown"
       >
         <div class="px-4 py-3">
           <span class="block text-sm text-gray-900 dark:text-white">{{
-            userLogin.username
+            userLogin?.username
           }}</span>
           <span
             class="block text-sm text-gray-500 truncate dark:text-gray-400"
-            >{{ userLogin.user_code }}</span
+            >{{ userLogin?.user_code }}</span
           >
           <span class="block text-sm text-gray-500 truncate dark:text-gray-400">
-            Level: {{ userLogin.level_code }}
+            Level: {{ userLogin?.level_code }}
           </span>
         </div>
         <ul class="py-2" aria-labelledby="user-menu-button">
@@ -57,30 +57,6 @@
           </li>
         </ul>
       </div>
-      <button
-        data-collapse-toggle="navbar-user"
-        type="button"
-        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-        aria-controls="navbar-user"
-        aria-expanded="false"
-      >
-        <span class="sr-only">Open main menu</span>
-        <svg
-          class="w-5 h-5"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 17 14"
-        >
-          <path
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M1 1h15M1 7h15M1 13h15"
-          />
-        </svg>
-      </button>
     </div>
     <div
       class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 md:me-20"
@@ -99,14 +75,14 @@
         </li>
         <li *ngIf="userLogin">
           <a
-            href="#"
+            routerLink="/progress"
             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-primary md:p-2 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >Progress</a
           >
         </li>
         <li>
           <a
-            href="#"
+            routerLink="/about"
             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-primary md:p-2 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >About</a
           >
