--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -3,7 +3,7 @@
     class="hero h-screen grid grid-cols-2 bg-gradient-to-b from-[#A2DDF8] to-[#fff]"
   >
     <div class="desc grid justify-center content-center p-16">
-      <p class="text-5xl text-primary font-extrabold">Lorem Ipsum</p>
+      <p class="text-5xl text-primary font-extrabold">Why Purely?</p>
       <p class="mt-5">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id possimus
         ullam nam? Aliquid, fuga quasi? Aliquam debitis fugit eveniet laboriosam
@@ -15,18 +15,68 @@
       <img src="./../../../assets/img/icon-about.png" alt="" />
     </div>
   </div>
-  <div class="ourTeam grid grid-rows-2">
-    <div class="title grid justify-center content-center text-center">
+  <div class="grid">
+    <div
+      class="title grid grid-cols-1 justify-center content-center text-center"
+    >
       <div class="sub-title">
-        <p class="text-2xl font-bold">Lorem Ipsum</p>
+        <p class="text-2xl font-bold mb-1">More than Puzzle</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,</p>
       </div>
     </div>
-    <div class="grid md:grid-cols-3 justify-center content-center">
+    <div class="grid md:grid-cols-2 mt-28 justify-center content-center">
+      <div class="card-puzzle p-2 mt-5 flex flex-col items-center">
+        <img
+          src="./../../../assets/img/icon-book.png"
+          class="w-28 mb-6"
+          alt=""
+        />
+        <p class="text-2xl font-bold text-primary">Puzzle</p>
+        <p class="text-center">Puzzle yang memuat tema kekayaan</p>
+        <p class="text-center">alam dan budaya Indonesia.</p>
+      </div>
+      <div class="card-puzzle p-5 mt-5 flex flex-col items-center">
+        <img
+          src="./../../../assets/img/icon-cube.png"
+          class="w-28 mb-6"
+          alt=""
+        />
+        <p class="text-2xl font-bold text-primary">Augmented Reality</p>
+        <p class="text-center">Tampilan AR yang dapat meningkatkan</p>
+        <p class="text-center">minat belajar anak.</p>
+      </div>
+      <div class="card-puzzle p-5 mt-5 flex flex-col items-center">
+        <img
+          src="./../../../assets/img/icon-head.png"
+          class="w-28 mb-6"
+          alt=""
+        />
+        <p class="text-2xl font-bold text-primary">Fitur Quiz</p>
+        <p class="text-center">Quiz yang dapat mengasah kemampuan</p>
+        <p class="text-center">anak dalam memahami materi</p>
+      </div>
+      <div class="card-puzzle p-5 mt-5 flex flex-col items-center">
+        <img
+          src="./../../../assets/img/icon-video.png"
+          class="w-28 mb-6"
+          alt=""
+        />
+        <p class="text-2xl font-bold text-primary">Video Pembelajaran</p>
+        <p class="text-center">Video pembelajaran yang memuat 2</p>
+        <p class="text-center">
+          bahasa yaitu Bahasa Indonesia dan Bahasa Inggris
+        </p>
+      </div>
+    </div>
+  </div>
+  <div
+    class="ourTeam mt-28 grid grid-rows-1 content-center justify-center bg-yellow-400"
+  >
+    <div class="grid grid-cols-1 md:grid-cols-3 p-5">
       <!-- Card 1 -->
       <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+        class="max-w-sm m-5 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
       >
         <a href="#">
           <img
@@ -52,7 +102,7 @@
 
       <!-- Card 2 -->
       <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+        class="max-w-sm m-5 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
       >
         <a href="#">
           <img
@@ -78,7 +128,7 @@
 
       <!-- Card 3 -->
       <div
-        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+        class="max-w-sm m-5 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
       >
         <a href="#">
           <img
@@ -100,6 +150,40 @@
             far, in reverse chronological order.
           </p>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer mt-24">
+    <div class="logo-pubaru ms-5">
+      <img src="./../../../assets/img/logo-pubaru.png" alt="" />
+    </div>
+    <div class="footer-menu grid grid-cols-3 p-10">
+      <div class="">
+        <p class="text-2xl font-bold">How to get Purely?</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+          magni, labore dicta quia ipsa quibusdam officiis suscipit vero porro
+          hic aut, nisi deserunt tempore reprehenderit enim eligendi aliquid
+          modi iusto?
+        </p>
+      </div>
+      <div class="">
+        <p class="text-2xl font-bold">Our Sosial Media</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+          magni, labore dicta quia ipsa quibusdam officiis suscipit vero porro
+          hic aut, nisi deserunt tempore reprehenderit enim eligendi aliquid
+          modi iusto?
+        </p>
+      </div>
+      <div class="">
+        <p class="text-2xl font-bold">Contact Us</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+          magni, labore dicta quia ipsa quibusdam officiis suscipit vero porro
+          hic aut, nisi deserunt tempore reprehenderit enim eligendi aliquid
+          modi iusto?
+        </p>
       </div>
     </div>
   </div>
