--- a/src/app/pages/layouts/layouts.component.html
+++ b/src/app/pages/layouts/layouts.component.html
@@ -75,7 +75,7 @@
         </li>
         <li *ngIf="userLogin">
           <a
-            routerLink="/progress"
+            routerLink="/progress-page"
             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-primary md:p-2 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >Progress</a
           >
