--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,14 +1,14 @@
-<ng-container class="">
+<ng-container class="relative">
+  <app-navbar class="absolute md:left-[65em]"></app-navbar>
   <div
-    class="hero h-screen grid grid-cols-2 bg-gradient-to-b from-[#A2DDF8] to-[#fff]"
+    class="hero h-screen grid grid-cols-1 md:grid-cols-2 bg-gradient-to-b from-[#A2DDF8] to-[#fff]"
   >
-    <div class="desc grid justify-center content-center p-16">
-      <p class="text-5xl text-primary font-extrabold">Why Purely?</p>
+    <div class="desc grid justify-center content-center p-16 ms-5">
+      <p class="text-5xl text-primary font-extrabold">Mengapa harus PURELY?</p>
       <p class="mt-5">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id possimus
-        ullam nam? Aliquid, fuga quasi? Aliquam debitis fugit eveniet laboriosam
-        labore, voluptatem corporis repellat tenetur? Magni ipsa aliquam odio
-        quae.
+        Karena PURELY lebih dari Puzzle biasa. PURELY merupakan puzzle yang
+        memanfaatkan digitalisasi untuk mengoptimalkan pemahaman anak terhadap
+        materi.
       </p>
     </div>
     <div class="icon-about grid justify-center content-center">
@@ -21,8 +21,14 @@
     >
       <div class="sub-title">
         <p class="text-2xl font-bold mb-1">More than Puzzle</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,</p>
+        <p>
+          PURELY memiliki beberapa keunggulan yang dapat membantu siswa dalam
+          memahami materi. Dengan menggunakan PURELY,
+        </p>
+        <p>
+          siswa dapat merasakan belajar yang menyenangkan serta dapat mengetahui
+          hasil capaian belajar mereka.
+        </p>
       </div>
     </div>
     <div class="grid md:grid-cols-2 mt-28 justify-center content-center">
@@ -157,7 +163,7 @@
     <div class="logo-pubaru ms-5">
       <img src="./../../../assets/img/logo-pubaru.png" alt="" />
     </div>
-    <div class="footer-menu grid grid-cols-3 p-10">
+    <div class="footer-menu grid grid-cols-1 md:grid-cols-3 p-10">
       <div class="">
         <p class="text-2xl font-bold">How to get Purely?</p>
         <p>
@@ -167,7 +173,7 @@
           modi iusto?
         </p>
       </div>
-      <div class="">
+      <div class="mt-5 md:mt-0">
         <p class="text-2xl font-bold">Our Sosial Media</p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
@@ -176,7 +182,7 @@
           modi iusto?
         </p>
       </div>
-      <div class="">
+      <div class="mt-5 md:mt-0">
         <p class="text-2xl font-bold">Contact Us</p>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
