--- a/src/app/pages/landing-page-quiz/landing-page-quiz.component.html
+++ b/src/app/pages/landing-page-quiz/landing-page-quiz.component.html
@@ -1,18 +1,12 @@
-<section
-  class="container h-screen w-full bg-cloud-quiz bg-fixed bg-no-repeat p-0"
->
+<section class="container h-screen w-full bg-fixed bg-no-repeat p-0">
   <div class="landingPageQuiz p-0 h-screen grid md:grid-cols-2">
     <div class="img grid justify-center content-center">
       <img src="./../../../assets/img/hero-quiz.png" alt="" />
     </div>
     <div class="desc grid content-center p-0 mr-24">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga neque
-        atque tenetur quia quisquam unde voluptatem aliquam hic. Voluptatem
-        dolorem. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-        Temporibus excepturi voluptatum mollitia reiciendis repellendus laborum
-        eaque sequi optio et, esse explicabo at quae obcaecati laudantium ea
-        impedit ut, porro velit!
+      <p class="text-2xl">
+        Hai Pubest, setelah melihat video pemaparan tadi, yuk uji coba
+        kemampuanmu dengan mengikuti Quiz PURELY!
       </p>
       <button
         type="button"
