--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -35,7 +35,7 @@
 </section>
 
 <section
-  class="bg-gradient-to-b from-[#A2DDF8] to-[#E3F2FA] bg-no-repeat bg-cover mt-36 md:mt-48"
+  class="bg-gradient-to-b from-[#A2DDF8] to-[#fff] bg-no-repeat bg-cover mt-36 md:mt-48"
 >
   <div class="grid md:grid-cols-2 hero-2">
     <div class="desc-2 grid justify-center content-center text-end p-20">
@@ -52,18 +52,16 @@
       <img src="./../../../assets/img/puzzle.png" alt="" />
     </div>
   </div>
-  <div class="hero-3 grid md:grid-cols-2">
+  <div class="hero-3 grid grid-cols-1 md:grid-cols-2 md:mt-40">
     <div class="video-bromo grid justify-center content-center">
-      <video
-        class="w-full h-auto max-w-full border border-gray-200 rounded-lg dark:border-gray-700"
-        controls
-      >
-        <source
-          src="https://www.youtube.com/watch?v=uz2oyfQNSdU"
-          type="video/mp4"
-        />
-        Your browser does not support the video tag.
-      </video>
+      <iframe
+        class="w-[20em] h-[10em] md:w-[40em] md:h-[20em] rounded-3xl"
+        src="https://www.youtube.com/embed/_6gq0XrHOOg"
+        title="Gunung Bromo"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </div>
     <div class="desc-3 grid justify-center content-center text-start p-20">
       <h1 class="text-5xl text-accent font-extrabold">Video Pembelajaran</h1>
@@ -79,8 +77,8 @@
     </div>
   </div>
 </section>
-<section class="about bg-gradient-to-b from-[#E3F2FA] to-[#A2DDF8]">
-  <div class="about grid md:grid-cols-2">
+<section class="ar bg-gradient-to-b from-[#fff] to-[#A2DDF8] md:mt-56">
+  <div class="ar grid grid-cols-1 md:grid-cols-2">
     <div class="desc-4 grid justify-center content-center text-end p-20">
       <h1 class="text-5xl text-accent font-extrabold">Our Augmented Reality</h1>
       <p class="mt-5">
@@ -93,8 +91,8 @@
         delectus excepturi quaerat.
       </p>
     </div>
-    <div class="img-about grid justify-center content-center">
-      <img src="./../../../assets/img/about.png" alt="" />
+    <div class="img-about grid grid-cols-1 justify-center content-center">
+      <img src="./../../../assets/img/mockup-ar.png" alt="" />
     </div>
   </div>
 </section>
