--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -6,7 +6,7 @@
       alt=""
     />
     <div class="text-center mt-2">
-      <p class="text-2xl font-extrabold">CONGARTULATIONS !!!</p>
+      <p class="text-2xl font-extrabold">CONGARTULATIONS !!! LEVEL UP!!!</p>
       <p class="xl">
         <i class="fa-solid fa-face-laugh-squint text-yellow-900"></i> Score
         Kamu:
