--- a/src/app/pages/layouts/layouts.component.html
+++ b/src/app/pages/layouts/layouts.component.html
@@ -1,97 +1,4 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
-  <div
-    class="max-w-screen-xl flex flex-wrap items-center sm:justify-between md:justify-end mx-auto p-4"
-  >
-    <div
-      class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse"
-    >
-      <button
-        routerLink="/auth/login"
-        *ngIf="!userLogin"
-        class="bg-accent text-white p-2 rounded-lg"
-      >
-        LOGIN
-      </button>
-      <ng-container *ngIf="userLogin">
-        <button
-          type="button"
-          (click)="toggleUserMenu()"
-          class="flex text-sm rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
-          id="user-menu-button"
-          aria-expanded="false"
-          data-dropdown-toggle="user-dropdown"
-          data-dropdown-placement="bottom"
-        >
-          <span class="sr-only">Open user menu</span>
-          <img
-            class="w-8 h-8"
-            src="./../../../assets/img/icon-user.png"
-            alt="user photo"
-          /></button
-      ></ng-container>
-
-      <!-- Dropdown menu -->
-      <div
-        class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600"
-        id="user-dropdown"
-      >
-        <div class="px-4 py-3">
-          <span class="block text-sm text-gray-900 dark:text-white">{{
-            userLogin?.username
-          }}</span>
-          <span
-            class="block text-sm text-gray-500 truncate dark:text-gray-400"
-            >{{ userLogin?.user_code }}</span
-          >
-          <span class="block text-sm text-gray-500 truncate dark:text-gray-400">
-            Level: {{ userLogin?.level_code }}
-          </span>
-        </div>
-        <ul class="py-2" aria-labelledby="user-menu-button">
-          <li>
-            <a
-              (click)="signOut()"
-              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
-              >Sign out</a
-            >
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div
-      class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 md:me-20"
-      id="navbar-user"
-    >
-      <ul
-        class="flex flex-col font-medium p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700 md:p-2"
-      >
-        <li>
-          <a
-            href="#"
-            class="block py-2 px-3 text-white bg-primary rounded-xl md:p-2 md:dark:text-blue-500"
-            aria-current="page"
-            >Home</a
-          >
-        </li>
-        <li *ngIf="userLogin">
-          <a
-            routerLink="/progress-page"
-            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-primary md:p-2 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-            >Progress</a
-          >
-        </li>
-        <li>
-          <a
-            routerLink="/about"
-            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-primary md:p-2 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-            >About</a
-          >
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
+<app-navbar></app-navbar>
 <section id="main-content">
   <app-landing-page [dataLogin]="userLogin"></app-landing-page>
 </section>
